--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apexcharts": "^3.19.0",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "sockjs-client": "^1.4.0",
     "vue": "^2.6.11",
+    "vue-apexcharts": "^1.5.3",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.3",
